tests/rosetta/transpiler/erl/circular-primes.error
exit status 127
The first 19 circular primes are:
escript: exception error: an error occurred when evaluating an arithmetic expression
  in function  main:'-iscircular/1-Fun_3_loop/3-1-'/3 (/workspace/mochi/tests/rosetta/transpiler/erl/circular-primes.erl, line 84)
  in call from main:iscircular/1 (/workspace/mochi/tests/rosetta/transpiler/erl/circular-primes.erl, line 102)
  in call from main:'-main/1-Fun_6_loop/0-0-'/0 (/workspace/mochi/tests/rosetta/transpiler/erl/circular-primes.erl, line 143)
  in call from main:'-main/1-Fun_6_loop/0-0-'/0 (/workspace/mochi/tests/rosetta/transpiler/erl/circular-primes.erl, line 168)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/circular-primes.erl, line 176)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
